# StaticPheWeb

./: .gitignore  .pre-commit-config.yaml  README.md  dev_notes.md  noxfile.py  pyproject.toml
.github/workflows/: build_and_test.yml
examples/: data.tsv
src/spheweb/: __init__.py  binning.py  chromosomes.py  cli.py  legacy_binning.py  parsing.py  process.py  template.html  variant.py
src/spheweb/templates/: manhattan.html  template.html
test/: __init__.py  conftest.py  pheno_data.csv  pheno_manhattan.json  test_cli.py  test_legacy_binning.py  test_package_data.py  test_render.py  test_tabular_parser.py  test_variant.py
