[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spheweb"
version = "0.0.1"
dependencies = [
  "click",
  "Jinja2",
  "pydantic",
]
requires-python = ">=3.9"
authors = [
  {name = "Rob Bierman", email = "rbierman@princeton.edu"},
]
description = "Generate static shareable websites from GWAS output"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["PheWAS", "GWAS", "PheWeb"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Bioinformaticians",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "html5lib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spheweb = ["templates/*.html"]

[project.scripts]
spheweb = "spheweb:cli.spheweb"

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".venv",
    ".vscode",
    "__pypackages__",
    "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "D", "I"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore = ["D203", "D211", "D213"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
